[project]
name = "tree-sprawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bstee615", email = "benjaminjsteenhoek@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "graphviz>=0.20.3",
    "pytest>=8.4.0",
    "streamlit>=1.46.0",
    "streamlit-agraph>=0.0.45",
    "tree-sitter<0.21.0",
    "tree-sitter-languages>=1.10.2",
    "uvicorn>=0.24.0",
]

[project.scripts]
tree-sprawler = "tree_sprawler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
